# tradistonks-api

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  compile-grammar.sh  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  lint.yml  release.yml
defaults/languages/cpp-language/: CMakeLists.txt
defaults/languages/cpp-language/include/: strategy.hpp  trading.hpp
defaults/languages/cpp-language/include/trading/: actions.hpp  data.hpp  phase.hpp
defaults/languages/cpp-language/src/: main.cpp
defaults/languages/cpp-language/src/_internal/: trading.cpp
docs/diagrams/: infra.md  oauth2.md
src/: app.module.ts  main.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
src/languages/: languages.controller.ts  languages.module.ts  languages.service.ts
src/permissions/: permissions.controller.ts  permissions.module.ts  permissions.service.ts
src/quality/: quality.module.ts  quality.service.spec.ts  quality.service.ts
src/redis/: redis.module.ts
src/refresh-tokens/: refresh-tokens.module.ts  refresh-tokens.service.spec.ts  refresh-tokens.service.ts
src/roles/: roles.controller.ts  roles.module.ts  roles.service.ts
src/runner/: runner.module.ts  runner.service.ts
src/schemas/: language.schema.ts  permission.schema.ts  refresh-token.schema.ts  role.schema.ts  schemas.module.ts  strategy.schema.ts  user.schema.ts
src/session/: session.middleware.ts  session.module.ts
src/stocks/: stocks.controller.ts  (+1 more)
types/: index.d.ts
(+99 files in other folders)
